--- a/quiz.css
+++ b/quiz.css
@@ -1,20 +1,16 @@
-@media (max-width: 768px) {
-	/* estilos para telas menores que 768px de largura */
-}
 body{
 	margin: 0;
   	padding: 0;
-	font-size: 18px;
-	font-family: Georgia;
 	color: #333;
 	background-color: #e1f3ca;
 }
 .question{
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	font-weight: 600px;
 	margin: 20px auto;
 	margin-bottom: 20px;
 	text-align: left;
-	font-size:22px;
+	font-size: 5vw;
 	background-color: #99bd69;
 	box-sizing: border-box;
 	border-radius: 20px;
@@ -23,13 +19,15 @@ body{
 	gap: 5px;
 	display: flex;
 	justify-content: space-between;
-	max-width:50%;
+	max-width:75%;
+	width: 55%;
 }
 .answers {
-    margin-bottom: 20px;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    	margin-bottom: 20px;
 	margin: 20px auto;
 	text-align: left;
-	font-size:18px;
+	font-size: 5vw;
 	background-color: #99bd69;
 	box-sizing: border-box;
 	border-radius: 20px;
@@ -38,11 +36,12 @@ body{
 	gap: 5px;
 	display: flex;
 	justify-content: space-between;
-	max-width:50%;
+	max-width:75%;
+	width: 55%;
 }
 #submit, #restart {
 	font-family: Garamond;
-	font-size: 20px;
+	font-size: 5vw;
 	background-color: #99bd69;
 	color: #fff;
 	border: 0px;
@@ -63,7 +62,7 @@ body{
 	background-color: #a00046;
 }
 h1 {
-	font-size: 42px;
+	font-size: 10vw;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	border: 0px;
 	border-radius: 5px;
@@ -78,7 +77,7 @@ h1 {
 footer {
 	max-width: 100%;
 	text-align: center;
-	font-size: 10px;
+	font-size: 2vw;
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	background-color: #99bd69;
 	color: #000000;
@@ -88,7 +87,7 @@ footer {
 	max-width: 100%;
 	height:0px;
 	text-align: center;
-	font-size: 16px;
+	font-size: 4vw;
 	color: #a00046;
 }
 .redes {
@@ -123,22 +122,22 @@ nav.redes {
 } 
 .credit {
 	max-width: 100%;
-    background-color: #a00046;
+    	background-color: #a00046;
 	color: #000000;
 	display: flex;
   	justify-content: center;
   	align-items: center;
 	text-align: center;
 	margin: 0;
-	font-size: 15px;
+	font-size: 3vw;
 }
 .credit-text {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .navbar {
 	background-color: #99bd69; 
 	overflow: hidden; 
-  }
+ }
 .navbar ul {
 	list-style-type: none; 
 	margin: 0;
@@ -154,9 +153,9 @@ nav.redes {
 .navbar a {
 	color: white;
 	text-decoration: none;
-	font-size: 20px; 
+	font-size: 6vw; 
 }
-  .navbar li a {
+ .navbar li a {
 	display: block;
 	color: white;
 	text-align: center;
@@ -166,3 +165,5 @@ nav.redes {
 .navbar li a:hover {
 	background-color: #a00046;
   }
+@media only screen and (max-width: 768px) {
+}
