--- a/quiz.css
+++ b/quiz.css
@@ -10,7 +10,7 @@ body{
 	margin: 20px auto;
 	margin-bottom: 20px;
 	text-align: left;
-	font-size: 5vw;
+	font-size: 22px;
 	background-color: #99bd69;
 	box-sizing: border-box;
 	border-radius: 20px;
@@ -27,7 +27,7 @@ body{
     	margin-bottom: 20px;
 	margin: 20px auto;
 	text-align: left;
-	font-size: 5vw;
+	font-size: 18px;
 	background-color: #99bd69;
 	box-sizing: border-box;
 	border-radius: 20px;
@@ -41,7 +41,7 @@ body{
 }
 #submit, #restart {
 	font-family: Garamond;
-	font-size: 5vw;
+	font-size: 20px;
 	background-color: #99bd69;
 	color: #fff;
 	border: 0px;
@@ -62,7 +62,7 @@ body{
 	background-color: #a00046;
 }
 h1 {
-	font-size: 10vw;
+	font-size: 42px;
 	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 	border: 0px;
 	border-radius: 5px;
@@ -77,7 +77,7 @@ h1 {
 footer {
 	max-width: 100%;
 	text-align: center;
-	font-size: 2vw;
+	font-size: 10px;
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	background-color: #99bd69;
 	color: #000000;
@@ -87,7 +87,7 @@ footer {
 	max-width: 100%;
 	height:0px;
 	text-align: center;
-	font-size: 4vw;
+	font-size: 16px;
 	color: #a00046;
 }
 .redes {
@@ -109,7 +109,7 @@ footer {
 }   
 .redes img {
 	width: 30px;
-    height: 30px;
+    	height: 30px;
 	max-width: 100%;
 	padding: 5px;
 	display: inline-block;
@@ -129,7 +129,7 @@ nav.redes {
   	align-items: center;
 	text-align: center;
 	margin: 0;
-	font-size: 3vw;
+	font-size: 15px;
 }
 .credit-text {
     	font-family: Georgia, 'Times New Roman', Times, serif;
@@ -153,7 +153,7 @@ nav.redes {
 .navbar a {
 	color: white;
 	text-decoration: none;
-	font-size: 6vw; 
+	font-size: 20px; 
 }
  .navbar li a {
 	display: block;
